# glory-to-protocol

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-br.md  CONTRIBUTING.md  CONTRIBUTING.pt-br.md  README.md  README.pt-br.md  TRUE_CODE_OF_CONDUCT.md  TRUE_CODE_OF_CONDUCT.pt-br.md  TRUE_CONTRIBUTING.md  TRUE_CONTRIBUTING.pt-br.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: complaint.md  config.yml  petition.md
.github/workflows/: ci.yml  release.yml
assets/: showcase-jobs.tape  showcase-logo.tape  showcase-palette.tape  showcase-stamps.tape  showcase-wrap.tape  showcase.tape
assets/vhs/: showcase-jobs.tape  showcase-logo.tape  showcase-palette.tape  showcase-stamps.tape  showcase-wrap.tape  showcase.tape
docs/: README.md  README.pt-br.md
docs/explanation/: dispatch-modes.md  dispatch-modes.pt-br.md
docs/how-to/: customize-tui.md  customize-tui.pt-br.md  use-fallback-mode.md  use-fallback-mode.pt-br.md
docs/reference/: components.md  components.pt-br.md  jobs.md  jobs.pt-br.md  settings.md  settings.pt-br.md  textual.md  textual.pt-br.md
docs/tutorials/: quickstart.md  quickstart.pt-br.md
examples/: _shared.py  cli.py  hybrid.py  showcase.py  tui.py
src/glory_to_protocol/: __init__.py  protocol.py  registry.py  settings.py  strings.py  typer.py  validations.py
src/glory_to_protocol/jobs/: __init__.py  pipeline.py  runner.py  types.py
src/glory_to_protocol/tui/: __init__.py  _ascii.py  _borders.py  _branding.py  _schema.py  app.py  exceptions.py  fallback.py  forms.py  header.py  help.py  identity.py  jobs.py  logo.py  providers.py  stamps.py  theme.py  width.py
src/glory_to_protocol/tui/screens/: __init__.py  form.py  help.py  palette.py  result.py
src/glory_to_protocol/tui/widgets/: __init__.py  command_palette.py  footer.py  header.py
src/glory_to_protocol/validators/: base.py
tests/: test_injection.py  test_janitorial.py  test_lib_boundary.py  test_protocol.py  test_public_api.py  test_registry.py  test_settings.py  test_strings.py
tests/fixtures/: import_probe.py
tests/jobs/: test_handles.py  test_pipeline.py  test_runner.py
tests/tui/: _helpers.py  conftest.py  test_alignment.py  test_app_factory.py  test_fallback.py  test_form_screen.py  test_forms.py  test_header.py  test_help.py  test_help_extras.py  test_identity.py  test_jobs.py  test_jobs_live.py  test_logo.py  test_overlays.py  test_palette_screen.py  test_schema.py  test_streaming.py  test_textual_app.py  test_textual_dispatch.py  test_width.py
