[project]
name = "glory-to-protocol"
version = "0.1.0"
description = "TUI library do bureau NIRVYTEKH — Form, stamps, header, jobs ticker."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "click>=8.1",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
protocol-showcase = "examples.showcase:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glory_to_protocol", "examples"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "ty>=0.0.38",
    "pytest-cov>=7.1.0",
    "pytest-deadfixtures>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not real' --cov=glory_to_protocol --cov-report=term-missing --cov-fail-under=98"
markers = [
    "real: hits live resources or real backends; skipped by default.",
]

[tool.coverage.run]
branch = true
source = ["src/glory_to_protocol"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
