[project]
name = "glory-to-protocol"
version = "0.3.0"
description = "Deadpan state-bureau TUI library for Typer CLIs — framed forms, decision stamps, themed help, ASCII header, live jobs ticker."
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Nilton Frederico Teixeira", email = "niltonfrederico@pm.me" },
]
maintainers = [
    { name = "Nilton Frederico Teixeira", email = "niltonfrederico@pm.me" },
]
keywords = [
    "tui",
    "cli",
    "typer",
    "rich",
    "terminal",
    "forms",
    "soviet",
    "bureaucracy",
    "nirvytekh",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "rich>=15.0",
    "typer>=0.25",
    "click>=8.1",
    "pydantic-settings>=2.14.1",
]

[project.urls]
Homepage = "https://github.com/niltonfrederico/glory-to-protocol"
Repository = "https://github.com/niltonfrederico/glory-to-protocol"
Issues = "https://github.com/niltonfrederico/glory-to-protocol/issues"
Changelog = "https://github.com/niltonfrederico/glory-to-protocol/releases"

[project.scripts]
protocol-showcase = "examples.showcase:app"
protocol = "examples.showcase:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glory_to_protocol", "examples"]

[tool.hatch.build.targets.sdist]
exclude = [
    "assets",
    "logs",
    "TRUE_*.md",
    "planning",
    ".remember",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "pre-commit>=4.6",
    "ty>=0.0.38",
    "pytest-cov>=7.1.0",
    "pytest-deadfixtures>=3.1.0",
    "pytest-asyncio>=1.3.0",
    "bump-my-version>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not real' --cov=glory_to_protocol --cov-report=term-missing --cov-fail-under=98"
asyncio_mode = "auto"
markers = [
    "real: hits live resources or real backends; skipped by default.",
]

[tool.coverage.run]
branch = true
source = ["src/glory_to_protocol"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.bumpversion]
current_version = "0.3.0"
allow_dirty = false
commit = true
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "release: v{new_version}"
commit_args = ""
message = "chore(release): bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
